# StockAnalysis

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/stock_analysis/: test.py  ticker.py
src/stock_analysis/adjustment/: data_adj.py
src/stock_analysis/input/: data_provider.py  fetch_api_data.py
