[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_analysis"
dynamic = ["version"]
authors = [
  { name="John Alex", email="john.alex100@outlook.com" },
]
description = "A simple package to analyse stocks and fit machine learning models. Intended for practicing Quantitative Finance methods."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pandas",
    "statsmodels",
    "scipy",
    "requests",
    "plotly",
    "matplotlib",
    "scikit-learn",
    "pylint"
]